Fix UsuarioDetails