@@ -2,7 +2,6 @@ package br.ufscar.dc.dsw.Trabalho2.security;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -23,7 +22,7 @@ public class UsuarioDetails implements UserDetails {
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         SimpleGrantedAuthority authority = new SimpleGrantedAuthority(usuario.getTipo());
-        return List.of(authority);
+        return Arrays.asList(authority);
     }
 
 	@Override
